Fixed color contrast ratio for Google Search URL Breadcrumb

--- a/assets/scss/cagov/version5.5/custom.scss
+++ b/assets/scss/cagov/version5.5/custom.scss
@@ -1,5 +1,3 @@
-$first-level-link-height : auto;
-
 @import '../custom/template';
 @import '../custom/main-content';
 @import '../custom/page-margins';
